Finish styling for image cards and quote wrappers

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </div>
 
     <div class="lower-banner">
-        Some random information.
+        <h2>Some random information.</h2>
         <div class="image-card-wrapper">
             <div class="image-card">
                 <div class="small-image-wrapper">
