Add images to webpage

--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
             <button>Sign up</button>
         </div>
         <div class="image-wrapper">
-            <!-- image goes here -->
-            this is a placeholder for an image
+            <img src="./images/toa-heftiba-chairs.jpg" alt="chairs">
         </div>
     </div>
 
@@ -39,25 +38,25 @@
         <div class="image-card-wrapper">
             <div class="image-card">
                 <div class="small-image-wrapper">
-                    <!-- image goes here -->
+                    <img src="./images/henry-be-lc7xcWebECc-unsplash.jpg">
                 </div>
                 this is some subtext under an image
             </div>
             <div class="image-card">
                 <div class="small-image-wrapper">
-                    <!-- image goes here -->
+                    <img src="./images/dillon-shook-mY3_bvR74fI-unsplash.jpg">
                 </div>
                 this is some subtext under an image
             </div>
             <div class="image-card">
                 <div class="small-image-wrapper">
-                    <!-- image goes here -->
+                    <img src="./images/ethan-hoover-vasU4-TlC5I-unsplash.jpg">
                 </div>
                 this is some subtext under an image
             </div>
             <div class="image-card">
                 <div class="small-image-wrapper">
-                    <!-- image goes here -->
+                    <img src="./images/fahmi-fakhrudin-nzyzAUsbV0M-unsplash.jpg">
                 </div>
                 this is some subtext under an image
             </div>
